--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/black"
+        android:background="@color/white"
         android:layout_gravity="bottom">
 
         <EditText
@@ -49,22 +49,23 @@
             android:layout_alignParentStart="true"
             android:layout_gravity="start"
             android:layout_marginEnd="94sp"
-            android:hint="Hi introvert! ask your doubt"
-            android:minHeight="60sp"
+            android:hint="@string/sample_message"
+
             android:layout_marginStart="24sp"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textColorHint="@color/hint" />
 
 
         <ImageButton
             android:id="@+id/send_button"
-            android:layout_width="60sp"
-            android:layout_height="60sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:foregroundGravity="center"
             android:layout_alignParentStart="false"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="4sp"
-            android:background="@color/black"
+            android:background="@color/white"
+            android:layout_margin="4sp"
             android:src="@drawable/ic_baseline_send_24"
             android:visibility="visible" />
     </RelativeLayout>
