--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView
+    app:cardCornerRadius="0sp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+     android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:layout_marginStart="8sp"
+    android:layout_marginEnd="8sp"
+    android:layout_marginTop="8sp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:backgroundTint="@color/colorPrimaryDark">
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center|top"
     android:layout_marginStart="0sp"
-    android:layout_marginEnd="0sp"
-    android:background="@color/white"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_marginEnd="0sp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="0sp"
         android:layout_margin="12sp"
-        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,8 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginStart="8sp"
-            android:backgroundTint="@color/white"
+            android:layout_marginStart="0sp"
             android:orientation="vertical">
 
             <TextView
@@ -44,8 +49,8 @@
                 android:lineSpacingExtra="8sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                 android:text="HI! I have doubt in segment trees"
-                android:textColor="@color/black"
-                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
                 style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse" />
 
             <TextView
@@ -64,3 +69,4 @@
         </LinearLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
