--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#344955</color>
     <color name="colorPrimaryDark">#232F34</color>
-    <color name="colorAccent">#F9AA33</color>
+    <color name="colorAccent">#232F34</color>
     <color name="white">#ffffff</color>
     <color name="white2">#E6E6E6</color>
     <color name="black2">#353535</color>
